# knights-to-see-you

./: .cz.json  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  deny.toml  dprint.json  pyproject.toml
.github/workflows/: dependency-review.yml  general.yml  links.yml  pre-commit.yml  scheduled-audit.yml  scorecard.yml  typos.yml  validate-licenses.yml
godot/: default_bus_layout.tres  godot-splash.png.import  icon.svg.import  knights-to-see-you.gdextension  knights-to-see-you.gdextension.uid  project.godot
godot/assets/fonts/: PixelOperator8-Bold.ttf.import  PixelOperator8.ttf.import
godot/assets/music/: time_for_adventure.mp3.import
godot/assets/sounds/: coin.wav.import  explosion.wav.import  hurt.wav.import  jump.wav.import  power_up.wav.import  tap.wav.import
godot/assets/sprites/: coin.png.import  fruit.png.import  knight.png.import  platforms.png.import  slime_green.png.import  slime_purple.png.import  world_tileset.png.import
godot/scenes/: coin.tscn  game.tscn  killzone.tscn  music.tscn  platform.tscn  player.tscn  slime.tscn
godot/scripts/: coin.gd  coin.gd.uid  game-manager.gd  game-manager.gd.uid  killzone.gd  killzone.gd.uid  slime.gd  slime.gd.uid
rust/: Cargo.toml
rust/src/: lib.rs  player.rs
