[package]
name = "rust"
version = "0.1.0"
authors = ["Rodney Johnson <ask@rodneylab.com>"]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/rodneylab/knights-to-see-you"
# godot v0.2.0 requires 1.80.0 or newer
rust-version = "1.78"
description = "Godot Rust game"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { version = "0.3.3", features = ["api-4-2"] }
