[package]
name = "rust"
version = "0.1.0"
authors = ["Rodney Johnson <ask@rodneylab.com>"]
edition = "2024"
license = "BSD-3-Clause"
repository = "https://github.com/rodneylab/knights-to-see-you"
# godot v0.5.1 requires 1.94.0 or newer
rust-version = "1.94"
description = "Godot Rust game"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { version = "0.5.1", features = ["api-4-2"] }
